Перенос исправлений в свой аккаунт

--- a/tagadapter/src/main/res/layout/row_tag.xml
+++ b/tagadapter/src/main/res/layout/row_tag.xml
@@ -16,4 +16,4 @@
           android:paddingEnd="@dimen/marginSmall"
           android:paddingBottom="@dimen/marginTiny"
           android:singleLine="true"
-          android:textColor="@color/colorTextLight"/>
+          android:textColor="#FE391E"/>
