--- a/tagadapter/src/main/res/drawable/title_cornered_normal.xml
+++ b/tagadapter/src/main/res/drawable/title_cornered_normal.xml
@@ -2,6 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
 
-    <corners android:radius="12dp"/>
-    <solid android:color="@color/colorPrimary"/>
+    <corners android:radius="8dp"/>
+    <stroke
+        android:color="#FE391E"
+        android:width="1dp" />
 </shape>
