--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -9,10 +10,22 @@
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:id="@+id/rv"
+            android:layout_marginStart="13dp"
+            android:layout_marginEnd="13dp"
             android:paddingEnd="@dimen/marginMedium"
             android:paddingStart="@dimen/marginMedium"
             android:layout_height="match_parent">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <Button
+            android:id="@+id/button"
+            android:layout_height="40dp"
+            android:layout_width="100dp"
+            android:text="Click!"
+            android:onClick="clickButton"
+            app:layout_constraintBottom_toBottomOf="@+id/rv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
